--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,11 +1,7 @@
 <!-- Header -->
 <header class="header">
-  <button
-    class="mobile-toggle"
-    id="mobile-toggle"
-    aria-label="Abrir menu"
-  >
-    <i class="lucide-menu"></i>
+  <button id="mobile-toggle" class="mobile-toggle" aria-label="Abrir menu">
+  <i class="lucide-menu"></i>
   </button>
   <h1 class="header-title">Dashboard</h1>
   <div class="header-search">
